--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@ SwickBot
 <h1>
 SwickBot
 </h1>
+<h3>
+  <a href="./pp/">
+    Pricavy Politicy
+  </a>
+  </h3>
+  <h3>
+    <a href="./terms/">
+      Terms and Condituinons
+    </a>
+  </h3>
 </body>
 </html>
