--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ SwickBot
   </h3>
   <h3>
     <a href="./terms/">
-      Terms and Condituinons
+      Terms of Servivce
     </a>
   </h3>
 </body>
